# pygithub-query-csv

./: pyproject.toml  repos.csv
pygithub_query_csv/: github_query.py
